--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,3 +8,7 @@ steps:
     args: [ 'push', '${_IMAGE_PATH}']
 images:
 - '${_IMAGE_PATH}'
+substitutions:
+  _REPOSITORY: gke-psc-demo-repo # default value
+  _IMAGE: gke-psc-image # default value
+  _IMAGE_PATH: us-west1-docker.pkg.dev/backend-svc-01/gke-psc-demo-repo/gke-psc-image # default value
